// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NFTs render correctly 1`] = `
<View
  appearance="default"
  level="1"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView>
    <View>
      <View
        appearance="default"
        level="1"
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <RNCSafeAreaView
          edges={
            {
              "bottom": "additive",
              "left": "additive",
              "right": "additive",
              "top": "additive",
            }
          }
          style={
            [
              {
                "flex": 1,
                "marginHorizontal": 37.5,
                "marginVertical": 66.7,
              },
              {
                "marginBottom": 0,
                "paddingTop": 66.7,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "borderColor": "#598BFF",
                  "borderRadius": 10,
                  "borderWidth": 1,
                  "height": 667,
                  "overflow": "hidden",
                  "width": "100%",
                },
                {
                  "marginBottom": 26.68,
                },
              ]
            }
          >
            <View
              style={
                {
                  "elevation": 15,
                  "flex": 1,
                  "flexDirection": "column-reverse",
                  "overflow": "hidden",
                  "shadowColor": "black",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.5,
                  "shadowRadius": 10,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                bottom={0}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                left={0}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                position="absolute"
                right={0}
                source={[]}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                top={0}
                transition={null}
              />
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "borderRadius": 5,
                    "marginHorizontal": 15,
                    "marginVertical": 13.34,
                    "opacity": 1,
                    "overflow": "hidden",
                  }
                }
                testID="CollapsibleButton"
              >
                <View
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                      },
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "maxHeight": 600.3,
                        "paddingHorizontal": 15,
                        "paddingVertical": 13.34,
                      },
                    ]
                  }
                >
                  <ViewManagerAdapter_ExpoBlurView
                    blurReductionFactor={4}
                    intensity={50}
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    tint="default"
                  />
                  <View
                    style={
                      {
                        "width": "90%",
                      }
                    }
                  >
                    <Text
                      appearance="default"
                      category="h4"
                      status="basic"
                      style={
                        [
                          {
                            "color": "#222B45",
                            "fontFamily": "System",
                            "fontSize": 26,
                            "fontWeight": "800",
                          },
                          undefined,
                        ]
                      }
                    >
                      name0
                    </Text>
                    <View
                      collapsable={false}
                      pointerEvents="none"
                      style={
                        {
                          "height": 0,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        onLayout={[Function]}
                        style={{}}
                      >
                        <View>
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "marginVertical": 26.68,
                              }
                            }
                          >
                            <ViewManagerAdapter_ExpoImage
                              contentFit="contain"
                              contentPosition={
                                {
                                  "left": "50%",
                                  "top": "50%",
                                }
                              }
                              height={24}
                              marginRight={8}
                              onError={[Function]}
                              onLoad={[Function]}
                              onLoadStart={[Function]}
                              onProgress={[Function]}
                              placeholder={[]}
                              source={[]}
                              style={
                                {
                                  "height": 24,
                                  "marginRight": 8,
                                  "width": 24,
                                }
                              }
                              transition={null}
                              width={24}
                            />
                            <Text
                              appearance="default"
                              category="label"
                              status="basic"
                              style={
                                [
                                  {
                                    "color": "#222B45",
                                    "fontFamily": "System",
                                    "fontSize": 12,
                                    "fontWeight": "800",
                                  },
                                  undefined,
                                ]
                              }
                            >
                              localhost
                            </Text>
                          </View>
                          <Text
                            appearance="default"
                            category="h6"
                            status="basic"
                            style={
                              [
                                {
                                  "color": "#222B45",
                                  "fontFamily": "System",
                                  "fontSize": 18,
                                  "fontWeight": "800",
                                },
                                undefined,
                              ]
                            }
                          >
                            collectionName0
                          </Text>
                          <Text
                            appearance="default"
                            category="p1"
                            status="basic"
                            style={
                              [
                                {
                                  "color": "#222B45",
                                  "fontFamily": "System",
                                  "fontSize": 15,
                                  "fontWeight": "400",
                                },
                                undefined,
                              ]
                            }
                          >
                            collectionDescription0
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "height": "100%",
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "transform": [
                            {
                              "scale": 1,
                            },
                          ],
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight="32"
                        bbWidth="32"
                        fill="#222B45"
                        focusable={false}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            {
                              "height": 32,
                              "tintColor": "#222B45",
                              "width": 32,
                            },
                            {
                              "flex": 0,
                              "height": 32,
                              "width": 32,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4280429381,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGRect
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                                height="24"
                                matrix={
                                  [
                                    -1,
                                    1.2246467991473532e-16,
                                    -1.2246467991473532e-16,
                                    -1,
                                    24,
                                    24,
                                  ]
                                }
                                opacity={0}
                                width="24"
                                x="0"
                                y="0"
                              />
                              <RNSVGPath
                                d="M18 15a1 1 0 0 1-.64-.23L12 10.29l-5.37 4.32a1 1 0 0 1-1.41-.15 1 1 0 0 1 .15-1.41l6-4.83a1 1 0 0 1 1.27 0l6 5a1 1 0 0 1 .13 1.41A1 1 0 0 1 18 15z"
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderColor": "#598BFF",
                  "borderRadius": 10,
                  "borderWidth": 1,
                  "height": 667,
                  "overflow": "hidden",
                  "width": "100%",
                },
                {
                  "marginBottom": 26.68,
                },
              ]
            }
          >
            <View
              style={
                {
                  "elevation": 15,
                  "flex": 1,
                  "flexDirection": "column-reverse",
                  "overflow": "hidden",
                  "shadowColor": "black",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.5,
                  "shadowRadius": 10,
                }
              }
            >
              <ViewManagerAdapter_ExpoImage
                bottom={0}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                left={0}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                position="absolute"
                right={0}
                source={[]}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                top={0}
                transition={null}
              />
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "borderRadius": 5,
                    "marginHorizontal": 15,
                    "marginVertical": 13.34,
                    "opacity": 1,
                    "overflow": "hidden",
                  }
                }
                testID="CollapsibleButton"
              >
                <View
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                      },
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "maxHeight": 600.3,
                        "paddingHorizontal": 15,
                        "paddingVertical": 13.34,
                      },
                    ]
                  }
                >
                  <ViewManagerAdapter_ExpoBlurView
                    blurReductionFactor={4}
                    intensity={50}
                    style={
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    tint="default"
                  />
                  <View
                    style={
                      {
                        "width": "90%",
                      }
                    }
                  >
                    <Text
                      appearance="default"
                      category="h4"
                      status="basic"
                      style={
                        [
                          {
                            "color": "#222B45",
                            "fontFamily": "System",
                            "fontSize": 26,
                            "fontWeight": "800",
                          },
                          undefined,
                        ]
                      }
                    >
                      name1
                    </Text>
                    <View
                      collapsable={false}
                      pointerEvents="none"
                      style={
                        {
                          "height": 0,
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        onLayout={[Function]}
                        style={{}}
                      >
                        <View>
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "marginVertical": 26.68,
                              }
                            }
                          >
                            <ViewManagerAdapter_ExpoImage
                              contentFit="contain"
                              contentPosition={
                                {
                                  "left": "50%",
                                  "top": "50%",
                                }
                              }
                              height={24}
                              marginRight={8}
                              onError={[Function]}
                              onLoad={[Function]}
                              onLoadStart={[Function]}
                              onProgress={[Function]}
                              placeholder={[]}
                              source={[]}
                              style={
                                {
                                  "height": 24,
                                  "marginRight": 8,
                                  "width": 24,
                                }
                              }
                              transition={null}
                              width={24}
                            />
                            <Text
                              appearance="default"
                              category="label"
                              status="basic"
                              style={
                                [
                                  {
                                    "color": "#222B45",
                                    "fontFamily": "System",
                                    "fontSize": 12,
                                    "fontWeight": "800",
                                  },
                                  undefined,
                                ]
                              }
                            >
                              localhost
                            </Text>
                          </View>
                          <Text
                            appearance="default"
                            category="h6"
                            status="basic"
                            style={
                              [
                                {
                                  "color": "#222B45",
                                  "fontFamily": "System",
                                  "fontSize": 18,
                                  "fontWeight": "800",
                                },
                                undefined,
                              ]
                            }
                          >
                            collectionName1
                          </Text>
                          <Text
                            appearance="default"
                            category="p1"
                            status="basic"
                            style={
                              [
                                {
                                  "color": "#222B45",
                                  "fontFamily": "System",
                                  "fontSize": 15,
                                  "fontWeight": "400",
                                },
                                undefined,
                              ]
                            }
                          >
                            collectionDescription1
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "height": "100%",
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "transform": [
                            {
                              "scale": 1,
                            },
                          ],
                        }
                      }
                    >
                      <RNSVGSvgView
                        align="xMidYMid"
                        bbHeight="32"
                        bbWidth="32"
                        fill="#222B45"
                        focusable={false}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            {
                              "height": 32,
                              "tintColor": "#222B45",
                              "width": 32,
                            },
                            {
                              "flex": 0,
                              "height": 32,
                              "width": 32,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4280429381,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGGroup
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            >
                              <RNSVGRect
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                                height="24"
                                matrix={
                                  [
                                    -1,
                                    1.2246467991473532e-16,
                                    -1.2246467991473532e-16,
                                    -1,
                                    24,
                                    24,
                                  ]
                                }
                                opacity={0}
                                width="24"
                                x="0"
                                y="0"
                              />
                              <RNSVGPath
                                d="M18 15a1 1 0 0 1-.64-.23L12 10.29l-5.37 4.32a1 1 0 0 1-1.41-.15 1 1 0 0 1 .15-1.41l6-4.83a1 1 0 0 1 1.27 0l6 5a1 1 0 0 1 .13 1.41A1 1 0 0 1 18 15z"
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              />
                            </RNSVGGroup>
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNCSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`NFTs render correctly loading 1`] = `
<View
  appearance="default"
  level="1"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView>
    <View>
      <View
        appearance="default"
        level="1"
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <RNCSafeAreaView
          edges={
            {
              "bottom": "additive",
              "left": "additive",
              "right": "additive",
              "top": "additive",
            }
          }
          style={
            [
              {
                "flex": 1,
                "marginHorizontal": 37.5,
                "marginVertical": 66.7,
              },
              {
                "marginBottom": 0,
                "paddingTop": 66.7,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              data-testid="spinner"
            />
          </View>
        </RNCSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`NFTs render correctly without nfts 1`] = `
<View
  appearance="default"
  level="1"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView>
    <View>
      <View
        appearance="default"
        level="1"
        style={
          [
            {
              "backgroundColor": "#FFFFFF",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <RNCSafeAreaView
          edges={
            {
              "bottom": "additive",
              "left": "additive",
              "right": "additive",
              "top": "additive",
            }
          }
          style={
            [
              {
                "flex": 1,
                "marginHorizontal": 37.5,
                "marginVertical": 66.7,
              },
              {
                "marginBottom": 0,
                "paddingTop": 66.7,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              appearance="default"
              category="label"
              status="basic"
              style={
                [
                  {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 12,
                    "fontWeight": "800",
                  },
                  undefined,
                ]
              }
            >
              No NFTs found
            </Text>
          </View>
        </RNCSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
